HTML "Yoshimi Control Data" now complete to replace .ods file. A considerable number of corrections were made, but there are still some unknowns to be investigated. The old file will be kept unmodified until the new one is known to be completely correct.
Removed ambiguity in CBtest
   now default is to *not* display text from miscMsg

--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content~type" content="text/html; charset=UTF~8">
   <title>Configuration</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -714,5 +714,24 @@
       </tr>
     </tbody>
   </table>
+  <div class="titles">
+  <table>
+    <thead>
+      <tr>
+        <th>PART::control +</th>
+        <th>value</th>
+        <th>control</th>
+        <th>part /<br>section</th>
+        <th>kit</th>
+        <th>engine</th>
+        <th>insert</th>
+        <th>param<br>eter</th>
+        <th>offset</th>
+        <th>miscmsg</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+  </table>
+  </div>
 </body>
 </html>
