--- a/dev_notes/Yoshimi Control Data/Sections/addsynth.html
+++ b/dev_notes/Yoshimi Control Data/Sections/addsynth.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content~type" content="text/html; charset=UTF~8">
   <title>AddSynth</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -190,7 +190,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Pop suppression</td>
+        <td>'Pop' suppression</td>
       </tr>
       <tr>
         <td>punchStrength</td>
@@ -203,7 +203,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Punch Strength</td>
+        <td>Punch strength</td>
       </tr>
       <tr>
         <td>punchDuration</td>
@@ -242,7 +242,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Punch velocity sensing</td>
+        <td>Punch velocity sensitivity</td>
       </tr>
     </tbody>
   </table>
