--- a/dev_notes/Yoshimi Control Data/Sections/midi.html
+++ b/dev_notes/Yoshimi Control Data/Sections/midi.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content~type" content="text/html; charset=UTF~8">
   <title>midi (incomming)</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <style>
 * {
   box-sizing: border-box;
