--- a/dev_notes/Yoshimi Control Data/Sections/midilearn.html
+++ b/dev_notes/Yoshimi Control Data/Sections/midilearn.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content~type" content="text/html; charset=UTF~8">
   <title>midilearn</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
