Added 'design Notes' file to Yoshimi Control Data     also a few more clarifications

--- a/dev_notes/Yoshimi Control Data/Sections/bank.html
+++ b/dev_notes/Yoshimi Control Data/Sections/bank.html
@@ -40,13 +40,26 @@
         <td>0~159<br>~ ~</td>
         <td>1</td>
         <td>244</td>
-        <td>0~127<br>255</td>
-        <td>0~127<br>255</td>
+        <td>0~127</td>
+        <td>0~127</td>
         <td>255</td>
-        <td>255<br>0~15</td>
+        <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Find instrument name -- bank, root, instrument<br> next in list or '*' if list end</td>
+        <td>Find instrument name -- instrument, bank, root</td>
+      </tr>
+      <tr>
+        <td>findInstrumentName</td>
+        <td>~ ~</td>
+        <td>1</td>
+        <td>244</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>0~15</td>
+        <td>255</td>
+        <td>ret. msg No.</td>
+        <td>Find next in list (or '*' if list end) -- instrument type</td>
       </tr>
       <tr>
         <td>renameInstrument</td>
