--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <td>copyPaste</td>
-        <td>0/1<br>ret. msg No.</td>
+        <td>0,1<br>ret. msg No.</td>
         <td>251</td>
         <td>0~63,241,242</td>
         <td>0~15</td>
@@ -46,11 +46,11 @@
         <td>0~3,255</td>
         <td>0,255</td>
         <td>msg No.</td>
-        <td>Perform actions List, Find type, Copy, Paste, Delete</td>
+        <td>Perform actions List (find type), Copy, Paste (delete)</td>
       </tr>
       <tr>
         <td>partBusy</td>
-        <td>Ret. 0~1</td>
+        <td>Ret. 0,1</td>
         <td>252</td>
         <td>0~63</td>
         <td>255</td>
