2023-11-17 Will bn 2285 Properly fixed CLI AddSynth voice number affecting PadSynth controls Paste clipboard button disabled if no entry for that section Small style cleanups in copy/paste Updated Yoshimi Control Data/toplevel.html Updated HTML guide for preset

--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -129,9 +129,9 @@
     <tbody>
       <tr>
         <td style="border:none">List</td>
-        <td style="border:none">0,1</td>
+        <td style="border:none">0~2</td>
         <td style="border:none">0</td>
-        <td style="text-align:left;border:none">Returns a lists of all the presets for the current section, (if 'value' = 1 returns the preset type)
+        <td style="text-align:left;border:none">Returns a lists of all the presets for the current section.<br>If 'value' = 1 returns a msgID for the preset type.<br>If 'value' = 2 only returns returns a msgID if there is a clipboard entry for that type.
       </tr>
       <tr>
         <td style="border:none">Copy</td>
