BugFix: Numerous PadSynth controls not updating on preset Paste BugFix: AddSynth slider not updating on preset Paste Fixed speeling Eras in guides :p

--- a/dev_notes/Yoshimi Control Data/Sections/effect.html
+++ b/dev_notes/Yoshimi Control Data/Sections/effect.html
@@ -152,7 +152,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Set effect destinatio -- Master out = -2, Off = -1, Parts 0 to 63)</td>
+        <td>Set effect destination -- Master out = -2, Off = -1,<br>Parts 0 to 63)</td>
       </tr>
       <tr>
         <td></td>
