--- a/dev_notes/Yoshimi Control Data/Sections/part.html
+++ b/dev_notes/Yoshimi Control Data/Sections/part.html
@@ -9,7 +9,7 @@
   <table>
     <thead>
       <tr>
-        <th>PART::control +</th>
+        <th>PART::control:: +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
@@ -608,7 +608,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Kit iten enable (can't disable item 0)</td>
+        <td>Kit item enable (can't disable item 0)</td>
        <tr>
         <td>kitItemMute</td>
         <td>0,1</td>
