--- a/dev_notes/Yoshimi Control Data/Sections/subsynth.html
+++ b/dev_notes/Yoshimi Control Data/Sections/subsynth.html
@@ -190,7 +190,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Detune type -- L35 cents, L10 cents, E100 cents, E1200 cents</td>
+        <td>Detune type -- L35 cents, L10 cents, E100 cents,<br>E1200 cents</td>
       </tr>
       <tr>
         <td>coarseDetune</td>
