--- a/dev_notes/Yoshimi Control Data/Sections/addvoice.html
+++ b/dev_notes/Yoshimi Control Data/Sections/addvoice.html
@@ -154,7 +154,7 @@
         <td>Modulator type -- Off, Morph, Ring, PM, FM, PWM</td>
       </tr>
       <tr>
-        <td>externamModulator</td>
+        <td>externalModulator</td>
         <td>-1~6</td>
         <td>17</td>
         <td>0~63</td>
