--- a/dev_notes/Yoshimi Control Data/Sections/padsynth.html
+++ b/dev_notes/Yoshimi Control Data/Sections/padsynth.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-</body>
+<body>
   <table>
     <thead>
       <tr>
-        <th>PADSYNTH::control +</th>
+        <th>PADSYNTH::control:: +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
@@ -151,7 +151,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Detune type -- L35 cents, L10 cents, E100 cents, E1200 cents</td>
+        <td>Detune type -- L35 cents, L10 cents, E100 cents,<br>E1200 cents</td>
       </tr>
       <tr>
         <td>coarseDetune</td>
