--- a/dev_notes/Yoshimi Control Data/index.html
+++ b/dev_notes/Yoshimi Control Data/index.html
@@ -8,6 +8,11 @@
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </head>
   <body>
+    <style>
+      html {
+          margin-left: 2em;
+      }
+    </style>
     <h1 style="text-align: center;">Yoshimi Control Numbers V2.3.1</h1>
     <h2>
     <a href="Sections/toplevel.html">Top Level Controls</a>
