Added missing details in Control Data filter section.     Legacy PDF now held back (available from me if needed) Typo corrections in Control Data. Updates to files in dev-notes. Set bugfix version 2.3.1.1 rc1

--- a/dev_notes/Yoshimi Control Data/Sections/addvoice.html
+++ b/dev_notes/Yoshimi Control Data/Sections/addvoice.html
@@ -112,7 +112,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Minus (effectiely invert volume control action)</td>
+        <td>Minus (effectively invert volume control action)</td>
       </tr>
       <tr>
         <td>enableAmplitudeEnvelope</td>
@@ -333,7 +333,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Uniso stereo spread</td>
+        <td>Unison stereo spread</td>
       </tr>
       <tr>
         <td>unisonVibratoDepth</td>
@@ -346,7 +346,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>unison vibrato depth</td>
+        <td>Unison vibrato depth</td>
       </tr>
       <tr>
         <td>unisonVibratoSpeed</td>
