--- a/dev_notes/Yoshimi Control Data/Sections/bank.html
+++ b/dev_notes/Yoshimi Control Data/Sections/bank.html
@@ -33,7 +33,7 @@
         <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Read instrument name -- bank, root, instrument</td>
+        <td>Read instrument name (bank, root, instrument)</td>
       </tr>
       <tr>
         <td>findInstrumentName</td>
@@ -46,7 +46,7 @@
         <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Find instrument name -- instrument, bank, root</td>
+        <td>Find instrument name (instrument, bank, root)</td>
       </tr>
       <tr>
         <td>findInstrumentName</td>
@@ -72,7 +72,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Rename instument -- bank, root, instrument</td>
+        <td>Rename instument (bank, root, instrument)</td>
       </tr>
       <tr>
         <td>saveInstrument</td>
@@ -85,7 +85,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Save instrument -- bank, root, instrument</td>
+        <td>Save instrument (bank, root, instrument)</td>
       </tr>
       <tr>
         <td>deleteInstrument</td>
@@ -111,7 +111,7 @@
         <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Swap instruments (select first)<br>bank, root, instrument</td>
+        <td>Swap instruments -- select first<br>(bank, root, instrument)</td>
       </tr>
       <tr>
         <td>selectSecondInstrumentAndSwap</td>
@@ -124,7 +124,7 @@
         <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Swap instruments (select seconsd and swap)<br>bank, root, instrument</td>
+        <td>Swap instruments -- select second and swap<br>(bank, root, instrument)</td>
       </tr>
       <tr>
         <td>selectBank</td>
@@ -176,7 +176,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Delete bank -- new ID, root ID or current root<br>not yet (currently in main)</td>
+        <td>Delete bank -- new ID, root ID or current root<br>not yet (it's currently in main)</td>
       </tr>
       <tr>
         <td>findBankSize</td>
@@ -202,7 +202,7 @@
         <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Swap banks (select first)</td>
+        <td>Swap banks -- select first<br>(bank, root)</td>
       </tr>
       <tr>
         <td>selectSecondBankAndSwap</td>
@@ -215,7 +215,7 @@
         <td>255</td>
         <td>255</td>
         <td>ret. msg No.</td>
-        <td>Swap banks (select second and swap)</td>
+        <td>Swap banks -- select second and swap<br>(bank, root)</td>
       </tr>
       <tr>
         <td>importBank</td>
@@ -228,7 +228,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Import bank<br>not yet (currently in main)</td>
+        <td>Import bank<br>not yet (it's currently in main)</td>
       </tr>
       <tr>
         <td>exportBank</td>
@@ -241,7 +241,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Export bank<br>not yet (currently in main)</td>
+        <td>Export bank<br>not yet (it's currently in main)</td>
       </tr>
       <tr>
         <td>selectRoot</td>
@@ -280,7 +280,7 @@
         <td>255</td>
         <td>255</td>
         <td>msg No.</td>
-        <td>Add named root to given ID via miscmsg<br>kit < 255 create and install bank / instrument<br>
+        <td>Add named root to given ID via miscmsg<br>kit &lt; 255 create and install bank / instrument<br>
         ret. value = 255 -- not found</td>
       </tr>
       <tr>
