--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -73,7 +73,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Virtual keyboard layout<br>QWERTY, Dvorak, OWERTY, AZERTY</td>
+        <td>Virtual keyboard layout<br>QWERTY, Dvorak, QWERTZ, AZERTY</td>
       </tr>
       <tr>
         <td>XMLcompressionLevel</td>
@@ -86,7 +86,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>XMK compression level</td>
+        <td>XML compression level</td>
       </tr>
       <tr>
         <td>reportsDestination</td>
@@ -346,7 +346,7 @@
         <td>255</td>
         <td>255</td>
         <td>msg No.</td>
-        <td>Jack MIDI cource</td>
+        <td>Jack MIDI source</td>
         </tr>
       <tr>
         <td>jackPreferredMidi</td>
