--- a/dev_notes/Yoshimi Control Data/Sections/envelopeinsert.html
+++ b/dev_notes/Yoshimi Control Data/Sections/envelopeinsert.html
@@ -172,7 +172,7 @@
         <td>0~3</td>
         <td>255</td>
         <td>255</td>
-        <td>local to GUI (opens the graphical editing window)</td>
+        <td>Local to GUI (opens the graphical editing window)</td>
       </tr>
       <tr>
         <td>enableFreeMode</td>
