--- a/dev_notes/Yoshimi Control Data/Sections/filterinsert.html
+++ b/dev_notes/Yoshimi Control Data/Sections/filterinsert.html
@@ -166,6 +166,229 @@
         <td>255</td>
         <td>Tracking shift -- 0 = -100% ~ 100%, 1 = 0 ~ 200%</td>
       </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td colspan="7" style="text-align:right;border:none">Formant editor</td>
+        <td colspan="4" style = border:none> <div class = "comment">If 'parameter' is not 255 the command is inside the format editor itself</div></td>
+      </tr>
+      <tr>
+        <td>formantSlowness</td>
+        <td>0~127</td>
+        <td>16</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Speed of transition between formants</td>
+      </tr>
+      <tr>
+        <td>formantClearness</td>
+        <td>0~127</td>
+        <td>17</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Degree of formant overlap</td>
+      </tr>
+      <tr>
+        <td>formantFrequency</td>
+        <td>0~127</td>
+        <td>18</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>formant 0~11</td>
+        <td>vowel 0~5</td>
+        <td>255</td>
+        <td>Frequency</td>
+      </tr>
+      <tr>
+        <td>formantQ</td>
+        <td>0~127</td>
+        <td>19</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>formant 0~11</td>
+        <td>vowel 0~5</td>
+        <td>255</td>
+        <td>Q</td>
+      </tr>
+      <tr>
+        <td>formantAmplitude</td>
+        <td>0~127</td>
+        <td>20</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>formant 0~11</td>
+        <td>vowel 0~5</td>
+        <td>255</td>
+        <td>Amplitude</td>
+      </tr>
+      <tr>
+        <td>formantStretch</td>
+        <td>0~127</td>
+        <td>21</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Sequence stretch</td>
+      </tr>
+      <tr>
+        <td>formantCenter</td>
+        <td>0~127</td>
+        <td>22</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Centre frequency</td>
+      </tr>
+      <tr>
+        <td>formantOctave</td>
+        <td>0~127</td>
+        <td>23</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Octave</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>numberOfFormants</td>
+        <td>1+12</td>
+        <td>32</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Number of formants used</td>
+      </tr>
+      <tr>
+        <td>vowelNumber</td>
+        <td>0~5</td>
+        <td>33</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Vowel number (not used - local to GUI)</td>
+      </tr>
+      <tr>
+        <td>formantNumber</td>
+        <td>1~11</td>
+        <td>34</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Formant number (not used - local to GUI)</td>
+      </tr>
+      <tr>
+        <td>sequenceSize</td>
+        <td>1~7</td>
+        <td>35</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Number of vowels used</td>
+      </tr>
+      <tr>
+        <td>sequencePostion</td>
+        <td>0~6</td>
+        <td>36</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0~size</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Sequence position(not used - local to GUI)</td>
+      </tr>
+      <tr>
+        <td>vowelPositionInSequence</td>
+        <td>0~6</td>
+        <td>37</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0~size</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Vowel position in sequence</td>
+      </tr>
+        <td>negateInput</td>
+        <td>0,1</td>
+        <td>38</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>1</td>
+        <td>All</td>
+        <td>0</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Negate input (from LFOs, Eevelopes etc.)</td>
     </tbody>
   </table>
 </body>
