--- a/dev_notes/Yoshimi Control Data/Sections/main.html
+++ b/dev_notes/Yoshimi Control Data/Sections/main.html
@@ -85,7 +85,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Panning law -- cut,normal,boot (not effects)</td>
+        <td>Panning law -- cut,normal,boost (not effects)</td>
       </tr>
       <tr>
         <td>detune</td>
@@ -423,7 +423,7 @@
         <td>255</td>
         <td>255</td>
         <td>msg No.</td>
-        <td>Export PadSynth samples to named prefix via miscMsg (from Pad window)</td>
+        <td>Export PadSynth samples to named prefix via miscMsg (from PadSynth window)</td>
       </tr>
       <tr>
         <td>masterReset</td>
