--- a/dev_notes/Yoshimi Control Data/Sections/oscillator.html
+++ b/dev_notes/Yoshimi Control Data/Sections/oscillator.html
@@ -50,7 +50,8 @@
         <td>Mag type -- Linear, -40dB, -60dB, -80dB, -100dB</td>
       </tr>
       <tr>
-        <td>harmonicRandomness</td>
+        <td>harmonicRandomness<br>
+        (hrndDial)</td>
         <td>0~127</td>
         <td>2</td>
         <td>0~63</td>
@@ -60,7 +61,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>hrndDial (no label -- associated with following)</td>
+        <td>No label -- associated with following</td>
       </tr>
       <tr>
         <td>harmonicRandomnessType</td>
@@ -112,7 +113,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Base function modualtion parameter 1</td>
+        <td>Base function modulation parameter 1</td>
       </tr>
       <tr>
         <td>baseModulationParameter2</td>
@@ -125,7 +126,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Base function modualtion parameter 2</td>
+        <td>Base function modulation parameter 2</td>
       </tr>
       <tr>
         <td>baseModulationParameter3</td>
@@ -138,7 +139,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Base function modualtion parameter 3</td>
+        <td>Base function modulation parameter 3</td>
       </tr>
       <tr>
         <td>baseModulationType</td>
@@ -164,7 +165,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Autoclear wneh base function (not used)</td>
+        <td>Autoclear when set as base function (not used)</td>
       </tr>
       <tr>
         <td>useAsBaseFunction</td>
@@ -450,7 +451,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Translate harmonics to User base function and set defaults</td>
+        <td>Translate harmonics to 'User' base function and set defaults</td>
       </tr>
       <tr>
         <td>harmonicAmplitude</td>
