--- a/dev_notes/Yoshimi Control Data/Sections/padsynth.html
+++ b/dev_notes/Yoshimi Control Data/Sections/padsynth.html
@@ -476,7 +476,7 @@
         <td>255</td>
         <td>0</td>
         <td>255</td>
-        <td>samples per octave -- 0.5, 1, 2, 3, 4, 6, 12</td>
+        <td>Samples per octave -- 0.5, 1, 2, 3, 4, 6, 12</td>
       </tr>
       <tr>
         <td>numberOfOctaves</td>
@@ -503,6 +503,19 @@
         <td>0</td>
         <td>255</td>
         <td>Sample size -- 16k, 32k, 64k, 128k, 256k, 512k, 1M</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>rebuildTrigger</td>
@@ -581,6 +594,19 @@
         <td>0</td>
         <td>255</td>
         <td>Param modulatorStretch random walk<br>if rebuildTrigger > 0</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>applyChanges</td>
