--- a/dev_notes/Yoshimi Control Data/Sections/part.html
+++ b/dev_notes/Yoshimi Control Data/Sections/part.html
@@ -242,7 +242,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Set maximum to last key press/td>
+        <td>Set maximum to last key press</td>
       </tr>
       <tr>
         <td>resetMinMax</td>
@@ -680,7 +680,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Kit item cler key limits</td>
+        <td>Kit item clear key limits</td>
        <tr>
         <td>kitEffectNum</td>
         <td>0~3</td>
