--- a/dev_notes/Yoshimi Control Data/Sections/resonance.html
+++ b/dev_notes/Yoshimi Control Data/Sections/resonance.html
@@ -150,9 +150,9 @@
         <td>0,2</td>
         <td>10</td>
         <td>255</td>
+        <td>0~255</td>
         <td>255</td>
-        <td>255</td>
-        <td>Graph point ampitude</td>
+        <td>Set graph point ampitude at (parameter) position</td>
       </tr>
     </tbody>
   </table>
