--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -33,7 +33,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Builds window title. With text if passed in 'value'</td>
+        <td>Builds window title. With text if ID passed in 'value'</td>
       </tr>
       <tr>
         <td>copyPaste</td>
