Revised HTML guide discovery. Also provides guide location to CLI. As this makes a quite detailed scan of the file system it's done in a separate thread so normal startup is not delayed.
Updated Control Data. Also filled in a number of missing entries.

Most of the bugs fixed are related to fairly recent changes.

Set bugfix release 2.3.1.1

--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -22,6 +22,19 @@
       </tr>
     </thead>
     <tbody>
+          <tr>
+        <td>guideLocation</td>
+        <td>ret. msg No.</td>
+        <td>~ ~</td>
+        <td>249</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>Shows location of latest HTML guide (read only)</td>
+      </tr>
       <tr>
         <td>windowTitle</td>
         <td>ret. msg No.</td>
@@ -72,20 +85,20 @@
         <td>~ ~</td>
         <td>~ ~</td>
         <td>~ ~</td>
-        <td>Invalid entry in text to data interpreter</td>
+        <td>Invalid entry in interpreter</td>
       </tr>
       <tr>
         <td>textMessage</td>
         <td>~ ~</td>
         <td>254</td>
-        <td>~ ~</td>
+        <td>250</td>
         <td>~ ~</td>
         <td>~ ~</td>
         <td>255</td>
         <td>255</td>
         <td>128</td>
         <td>msg No.</td>
-        <td>Just sends a message to the GUI</td>
+        <td>Just sends a non-blocking message to the GUI</td>
       </tr>
       <tr>
         <td>forceExit</td>
@@ -101,7 +114,7 @@
         <td>Force exit at any time from any section</td>
       </tr>
       <tr>
-        <td>instance ID</td>
+        <td>instanceID</td>
         <td>Ret. 0~31</td>
         <td>~ ~</td>
         <td>254</td>
