BugFix: Rather obscure build failure - not finding inline loadText()     Only happens on a headless build.
Updated ParamCheck.cpp/.h copyrights.
    None of this code predates Kristian's work.
Spelling corrections in User Guide and Control Data
Set bugfix release 2.3.1.3

--- a/dev_notes/Yoshimi Control Data/Sections/main.html
+++ b/dev_notes/Yoshimi Control Data/Sections/main.html
@@ -215,7 +215,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Delete bank (and all intruments) at root ID</td>
+        <td>Delete bank (and all instruments) at root ID</td>
       </tr>
       <tr>
         <td>loadInstrumentFromBank</td>
@@ -293,7 +293,8 @@
         <td>255</td>
         <td>255</td>
         <td>msg No.</td>
-        <td>Load named vector to channel (insert) via miscmsg</td>
+        <td>Load named vector to channel (insert) via miscmsg<br>
+        If insert is 255, use channel it was saved from.</td>
       </tr>
       <tr>
         <td>saveNamedVector</td>
