[guiconnect] - define notification message via CommandBlock system
We need just an unique global command-ID for the Dispatcher in the GUI
to branch and call back into GuiDataExchange::dispatchUpdates(commandBlock)

- the index-No of the buffer slot is packaged into the "offset" field

- not sure about the "part" field, since GuiDataMessage is a global system
  and not tied to any part, there is no part information required, and
  there can be several distinct RoutingTags in each part. I used the textMesg
  as a reference here, which works similar and sets part = section::message;

Add documentation for the new command kind
(and while there, fix the content-type designator 'UTF-8')

--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
 <head>
-  <meta http-equiv="content~type" content="text/html; charset=UTF~8">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Top Level</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -47,6 +47,19 @@
         <td>255</td>
         <td>255</td>
         <td>Builds window title. With text if ID passed in 'value'</td>
+      </tr>
+      <tr>
+        <td>dataExchange</td>
+        <td>~ ~</td>
+        <td>250</td>
+        <td>250</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>buff&nbsp;No.</td>
+        <td>~ ~</td>
+        <td>Notify for GuiDataExchange, data in designated buffer</td>
       </tr>
       <tr>
         <td>copyPaste</td>
