--- a/dev_notes/Yoshimi Control Data/Sections/effect.html
+++ b/dev_notes/Yoshimi Control Data/Sections/effect.html
@@ -9,14 +9,15 @@
     <div class=effLeftnote>
     Part number is 241 for system effects<br>
     Part number is 242 for insertion effects<br>
-    Normal part numbers are 0 to 63
+    Normal part numbers are 0 to 63<br><br>
+    Note: offset is used as a BPM marker and may be set to 1 or 3
     <div class=effRightnote>
     Kit numbers are 16 + (0 to 8)<br>
      for actual effect types <br>
     16 (0) is no effect
     </div>
     </div>
-
+    <br>
   <table>
     <thead>
       <tr>
@@ -138,7 +139,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Reverb, Distortion -- Low pass filter<br>Echo -- when '1', changes 'Delay' to left side delay, and 'LRdl' to right side delay<br>Chorus -- Delay, Phaser, AlienWah -- Feedback, DynFilter -- Filter vs Feedback</td>
+        <td>Reverb, Distortion -- Low pass filter<br>Echo -- when '1', changes delay to left side delay, and left/right delay ratio to right side delay<br>Chorus -- Delay, Phaser, AlienWah -- Feedback, DynFilter -- Filter vs Feedback</td>
       </tr>
       <tr>
         <td></td>
